aws-eks/cdk/vpc-deploy/cdk.out/VpcDeployStack.template.json
{
 "Resources": {
  "customvpc47192D33": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/Resource"
   }
  },
  "customvpcpublicSubnet1Subnet599790CF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet1/Subnet"
   }
  },
  "customvpcpublicSubnet1RouteTable608DB414": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet1/RouteTable"
   }
  },
  "customvpcpublicSubnet1RouteTableAssociationFA4548F5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "customvpcpublicSubnet1RouteTable608DB414"
    },
    "SubnetId": {
     "Ref": "customvpcpublicSubnet1Subnet599790CF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "customvpcpublicSubnet1DefaultRouteFE2A2D2B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "customvpcIGWE989450B"
    },
    "RouteTableId": {
     "Ref": "customvpcpublicSubnet1RouteTable608DB414"
    }
   },
   "DependsOn": [
    "customvpcVPCGW8692F501"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet1/DefaultRoute"
   }
  },
  "customvpcpublicSubnet1EIP15EACF3A": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet1/EIP"
   }
  },
  "customvpcpublicSubnet1NATGateway531AE75E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "customvpcpublicSubnet1EIP15EACF3A",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "customvpcpublicSubnet1Subnet599790CF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "customvpcpublicSubnet1DefaultRouteFE2A2D2B",
    "customvpcpublicSubnet1RouteTableAssociationFA4548F5"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet1/NATGateway"
   }
  },
  "customvpcpublicSubnet2SubnetAF96BD2A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet2/Subnet"
   }
  },
  "customvpcpublicSubnet2RouteTable727D426C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet2/RouteTable"
   }
  },
  "customvpcpublicSubnet2RouteTableAssociation797AA4F6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "customvpcpublicSubnet2RouteTable727D426C"
    },
    "SubnetId": {
     "Ref": "customvpcpublicSubnet2SubnetAF96BD2A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "customvpcpublicSubnet2DefaultRouteDF05CD05": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "customvpcIGWE989450B"
    },
    "RouteTableId": {
     "Ref": "customvpcpublicSubnet2RouteTable727D426C"
    }
   },
   "DependsOn": [
    "customvpcVPCGW8692F501"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/publicSubnet2/DefaultRoute"
   }
  },
  "customvpcprivateSubnet1SubnetA17C3E10": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/privateSubnet1/Subnet"
   }
  },
  "customvpcprivateSubnet1RouteTable65637279": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/privateSubnet1/RouteTable"
   }
  },
  "customvpcprivateSubnet1RouteTableAssociation38D423EF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "customvpcprivateSubnet1RouteTable65637279"
    },
    "SubnetId": {
     "Ref": "customvpcprivateSubnet1SubnetA17C3E10"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "customvpcprivateSubnet1DefaultRoute2DE62E63": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "customvpcpublicSubnet1NATGateway531AE75E"
    },
    "RouteTableId": {
     "Ref": "customvpcprivateSubnet1RouteTable65637279"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/privateSubnet1/DefaultRoute"
   }
  },
  "customvpcprivateSubnet2SubnetF7C8EAB9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/privateSubnet2/Subnet"
   }
  },
  "customvpcprivateSubnet2RouteTable99FA9876": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcDeployStack/custom-vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/privateSubnet2/RouteTable"
   }
  },
  "customvpcprivateSubnet2RouteTableAssociationB2F0992A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "customvpcprivateSubnet2RouteTable99FA9876"
    },
    "SubnetId": {
     "Ref": "customvpcprivateSubnet2SubnetF7C8EAB9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "customvpcprivateSubnet2DefaultRoute0A8D0680": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "customvpcpublicSubnet1NATGateway531AE75E"
    },
    "RouteTableId": {
     "Ref": "customvpcprivateSubnet2RouteTable99FA9876"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/privateSubnet2/DefaultRoute"
   }
  },
  "customvpcIGWE989450B": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/IGW"
   }
  },
  "customvpcVPCGW8692F501": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "customvpcIGWE989450B"
    },
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/VPCGW"
   }
  },
  "customvpcRestrictDefaultSecurityGroupCustomResource92268639": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "customvpc47192D33",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/custom-vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "customvpc47192D33",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "4b996a3e5a083d5c78c6f30a8571a94fb7ec557eecbe54dbc065faba0d9076e6.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.4b996a3e5a083d5c78c6f30a8571a94fb7ec557eecbe54dbc065faba0d9076e6",
    "aws:asset:property": "Code"
   }
  },
  "InternalSG67506B9C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "VpcDeployStack/InternalSG",
    "GroupName": "InternalSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow port 22",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": {
     "Ref": "customvpc47192D33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/InternalSG/Resource"
   }
  },
  "InternalSGfromVpcDeployStackInternalSG942B2F63InternalFromItselfAllow00039E34": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow from Internal-SG all",
    "FromPort": 0,
    "GroupId": {
     "Fn::GetAtt": [
      "InternalSG67506B9C",
      "GroupId"
     ]
    },
    "IpProtocol": "-1",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "InternalSG67506B9C",
      "GroupId"
     ]
    },
    "ToPort": 65535
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/InternalSG/from VpcDeployStackInternalSG942B2F63:Internal-FromItselfAllow"
   }
  },
  "server01pubInstanceRoleA53784A2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "server01-pub"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/server01-pub/InstanceRole/Resource"
   }
  },
  "server01pubInstanceProfile70C0535A": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "server01pubInstanceRoleA53784A2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/server01-pub/InstanceProfile"
   }
  },
  "server01pub0AA1839B": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "IamInstanceProfile": {
     "Ref": "server01pubInstanceProfile70C0535A"
    },
    "ImageId": {
     "Fn::FindInMap": [
      "server01pubAmiMap2EC719B5",
      {
       "Ref": "AWS::Region"
      },
      "ami"
     ]
    },
    "InstanceType": "t2.small",
    "KeyName": "ec2-key",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "InternalSG67506B9C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "customvpcpublicSubnet1Subnet599790CF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "server01-pub"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "server01pubInstanceRoleA53784A2"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/server01-pub/Resource"
   }
  },
  "server01privInstanceRole74B6C2BB": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "server01-priv"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/server01-priv/InstanceRole/Resource"
   }
  },
  "server01privInstanceProfileE2F36826": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "server01privInstanceRole74B6C2BB"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/server01-priv/InstanceProfile"
   }
  },
  "server01privBE5B67E7": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "IamInstanceProfile": {
     "Ref": "server01privInstanceProfileE2F36826"
    },
    "ImageId": {
     "Fn::FindInMap": [
      "server01privAmiMapB8EFCC22",
      {
       "Ref": "AWS::Region"
      },
      "ami"
     ]
    },
    "InstanceType": "t2.small",
    "KeyName": "ec2-key",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "InternalSG67506B9C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "customvpcprivateSubnet1SubnetA17C3E10"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "server01-priv"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "server01privInstanceRole74B6C2BB"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/server01-priv/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31QwW6DMAz9lt5DuqEJaccKTRWHTQimXqcQXOoVHJQ47SrEvy+MMi7TTu/5+T3HcSyfExlv1NVFuj5HLVZyKFnpswjSxwA6lsOh1yI90iFPRe6rFnXpKwKetJUVxjO8q6qFVV+1nXNGo2I09GueyEuWT/CmeK8YruomcouXQNfBGTHYwBfDvMm92nHY9dQBsShBe4t821vj+58d/hUyaiw4JzJyrEjD/NTMR4Gqk0Nh5s8suLRza47YwjiKApzxdgp7x6ZbyxD6uxWyF6zBinAR4HDpBqmZ/K+q7+80NVTjdKpRNOZRxg8y2bZI/murujp52nw6xMh6YuxAFjN+AwNn/F/IAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "VpcDeployStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Mappings": {
  "server01pubAmiMap2EC719B5": {
   "eu-central-1": {
    "ami": "ami-04e601abe3e1a910f"
   }
  },
  "server01privAmiMapB8EFCC22": {
   "eu-central-1": {
    "ami": "ami-04e601abe3e1a910f"
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
